--- a/blog-backend/package.json
+++ b/blog-backend/package.json
@@ -4,14 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "concurrently \"tsc -b --watch\" \"nodemon dist/server.js\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@types/express": "^5.0.1",
+    "dotenv": "^16.4.7",
     "express": "^5.1.0",
-    "hono": "^4.7.5"
+    "hono": "^4.7.5",
+    "nodemon": "^3.1.9"
+  },
+  "devDependencies": {
+    "concurrently": "^9.1.2"
   }
 }
